2010-12-26  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Fixed bug #16774: t3ver_stage should be int(11) instead of tinyint(4)

2010-12-25  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #15969: Task Center - sys_action: setting labels_ignoreprefix from sql query is ignored (Thanks to Andreas Kiessling)
	* Fixed bug #16824: [Caching framework] Update to latest FLOW3 version

2010-12-24  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16836: Remove useless alertbox (Thanks to Rens Admiraal)
	* Fixed bug #16800: Exec-wrapper
	* Fixed bug #16770: Make recycler stateful

2010-12-23  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16833: ExtJs RowExpander plugin miss support for states

2010-12-23  Jigal van Hemert <jigal@xs4all.nl>

	* Fixed bug #16825: Fatal error in lang.php (thanks to Georg Ringer)

2010-12-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16823: htmlArea RTE: Abbreviation dialogue and table lack contextual help
	* Fixed bug #5896: Inserting a divider (<hr>) on the RTE breaks XHTML validation

2010-12-22  Jigal van Hemert <jigal@xs4all.nl>

	* Fixed bug #16819: Icon to close open documents has no pointer cursor (thanks to Sebastian Michaelsen)

2010-12-22  Tobias Liebig  <mail_typo3@etobi.de>

	* Fixed bug #16667: (t3editor) typed text does not get replaced correctly by code completion (thanks to Stephan Petzl)

2010-12-22  Francois Suter  <francois.suter@typo3.org>

	* Follow-up to #16786: One instance of wrong preview link had not been fixed

2010-12-21  Francois Suter  <francois.suter@typo3.org>

	* Fixed bug #16786: Versioning: Generating preview link not working (thanks to Frederic Gaus)

2010-12-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16760: RTE transformation removes all span tags on save after upgrade TYPO3 4.4.5
	* Fixed bug #16805: htmlArea RTE: Clicking a label should set the focus on the input field

2010-12-21  Steffen Kamper  <steffen@typo3.org>

	* Merged new PageTree (version for TYPO3 4.5 Beta 3)